--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
-hello world
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mrs+Saint+Delafield&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poiret+One&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+
+      img {
+        height: 100px;
+        margin: 100px;
+      }
+
+      h1,
+      h4 {
+        color: #050d3c;
+      }
+
+      h4 {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        text-align: center;
+      }
+
+      .roboto-flex-600 {
+        font-family: "Roboto Flex", serif;
+        font-optical-sizing: auto;
+        font-weight: 600;
+        font-style: normal;
+        font-variation-settings: "slnt" 0, "wdth" 100, "GRAD" 0, "XOPQ" 96,
+          "XTRA" 468, "YOPQ" 79, "YTAS" 750, "YTDE" -203, "YTFI" 738, "YTLC" 514,
+          "YTUC" 712;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <img src="./image.png" />
+      <h1 class="roboto-flex-600">Coming Soon...</h1>
+      <h4 class="roboto-flex-600">
+        This website is being developed with respect for copyright regulations.
+        It will be launched upon agreement with the brand owner.
+      </h4>
+    </div>
+  </body>
+</html>
